--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -1,175 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content_create_event"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_create_event"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.hbv2.icelandevents.Activity.CreateEventActivity"
+    tools:showIn="@layout/activity_edit_event">
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.hbv2.icelandevents.Activity.CreateEventActivity"
-        tools:showIn="@layout/activity_edit_event">
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="1dp">
 
-        <ScrollView
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <EditText
+
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:inputType="textPersonName"
+                android:hint="Name of the Event"
+                android:ems="10"
+                android:id="@+id/eventNameText"
+                android:textAlignment="center"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/timeText" />
 
-                <EditText
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="Location"
+                android:ems="10"
+                android:id="@+id/locationText"
+                android:textAlignment="center"
+                android:layout_marginTop="14dp"
+                android:layout_below="@+id/eventNameText"
+                android:layout_alignStart="@+id/eventNameText" />
+
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Date"
+                android:ems="10"
+                android:id="@+id/dateText"
+                android:textAlignment="center"
+                android:layout_below="@+id/timeText"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:inputType="date"
+                android:focusable="false"
+                />
+
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="Time"
+                android:ems="10"
+                android:id="@+id/timeText"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/descriptionText"
+                android:layout_alignStart="@+id/dateText"
+                android:focusable="false" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="Description"
+                android:ems="10"
+                android:id="@+id/descriptionText"
+                android:textAlignment="center"
+                android:layout_marginTop="19dp"
+                android:layout_below="@+id/locationText"
+                android:layout_alignStart="@+id/locationText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageUrlText"
+                android:layout_below="@+id/upImageBtn"
+                android:layout_marginBottom="15dp"
+                android:layout_centerHorizontal="true" />
+
+            <RadioGroup
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="40dp"
+                android:layout_below="@+id/dateText"
+                android:layout_alignParentStart="true"
+                android:id="@+id/radioGroup">
+
+                <RadioButton
+                    android:text="Other"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:hint="Name of the Event"
-                    android:ems="10"
-                    android:id="@+id/eventNameText"
-                    android:textAlignment="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignStart="@+id/timeText" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:hint="Location"
-                    android:ems="10"
-                    android:id="@+id/locationText"
-                    android:textAlignment="center"
-                    android:layout_marginTop="15dp"
-                    android:layout_below="@+id/eventNameText"
-                    android:layout_alignStart="@+id/eventNameText" />
-
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Date"
-                    android:ems="10"
-                    android:id="@+id/dateText"
-                    android:textAlignment="center"
-                    android:layout_below="@+id/timeText"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:inputType="date"
-                    android:focusable="false"
+                    android:id="@+id/radioBtnOther"
+                    android:checked="true"
+                    android:onClick="onRadioButtonClicked"
                     />
 
-
-                <EditText
+                <RadioButton
+                    android:text="Rock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:hint="Time"
-                    android:ems="10"
-                    android:id="@+id/timeText"
-                    android:textAlignment="center"
-                    android:layout_marginTop="15dp"
-                    android:layout_below="@+id/descriptionText"
-                    android:layout_alignStart="@+id/dateText"
-                    android:focusable="false" />
+                    android:id="@+id/radioBtnRock"
+                    android:onClick="onRadioButtonClicked"
+                    />
 
-                <EditText
+                <RadioButton
+                    android:text="Pop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:hint="Description"
-                    android:ems="10"
-                    android:id="@+id/descriptionText"
-                    android:textAlignment="center"
-                    android:layout_marginTop="15dp"
-                    android:layout_below="@+id/locationText"
-                    android:layout_alignStart="@+id/locationText" />
+                    android:id="@+id/radioBtnPop"
+                    android:onClick="onRadioButtonClicked"
+                    />
 
-                <TextView
+                <RadioButton
+                    android:text="Jazz"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageUrlText"
-                    android:layout_above="@+id/saveBtn"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp" />/>
+                    android:id="@+id/radioBtnJazz"
+                    android:onClick="onRadioButtonClicked"
+                    />
+            </RadioGroup>
 
-                <RadioGroup
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="40dp"
-                    android:layout_below="@+id/dateText"
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/radioGroup">
+            <Button
+                android:text="Upload Image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/upImageBtn"
+                android:onClick="upImageBtnOnclick"
+                android:layout_below="@+id/radioGroup"
+                android:layout_centerHorizontal="true" />
+            <Button
+                android:text="Remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageUrlText"
+                android:layout_toEndOf="@+id/upImageBtn"
+                android:onClick="removeBtnOnClick"
+                android:id="@+id/removeBtn" />
 
-                    <RadioButton
-                        android:text="Other"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/radioBtnOther"
-                        android:checked="true"
-                        android:onClick="onRadioButtonClicked"
-                        />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/saveBtn"
+                android:onClick="saveBtnOnClick"
+                android:layout_below="@id/imageUrlText"
+                android:layout_toStartOf="@+id/upImageBtn"
+                android:text="Save" />
 
-                    <RadioButton
-                        android:text="Rock"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/radioBtnRock"
-                        android:onClick="onRadioButtonClicked"
-                        />
-
-                    <RadioButton
-                        android:text="Pop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/radioBtnPop"
-                        android:onClick="onRadioButtonClicked"
-                        />
-
-                    <RadioButton
-                        android:text="Jazz"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/radioBtnJazz"
-                        android:onClick="onRadioButtonClicked"
-                        />
-                </RadioGroup>
-
-
-                <Button
-                    android:text="Upload Image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/upImageBtn"
-                    android:onClick="upImageBtnOnclick"
-                    android:layout_below="@+id/radioGroup"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"/>
-
-                <Button
-                    android:text="Remove"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:onClick="removeBtnOnClick"
-                    android:layout_below="@+id/upImageBtn"
-                    android:layout_alignParentRight="true"
-                    android:id="@+id/removeBtn" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/saveBtn"
-                    android:onClick="saveBtnOnClick"
-                    android:layout_below="@+id/upImageBtn"
-                    android:layout_alignParentLeft="true"
-                    android:text="Save" />
-            </RelativeLayout>
-        </ScrollView>
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
