laga scroll vesiðin

--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -1,95 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_sign_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.hbv2.icelandevents.Activity.SignUpActivity"
+    tools:showIn="@layout/activity_sign_up">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content_sign_up"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.hbv2.icelandevents.Activity.SignUpActivity"
-        tools:showIn="@layout/activity_sign_up">
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp">
 
-        <EditText
-            android:layout_marginTop="50dp"
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:layout_below="@+id/textView4"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/nameEditTextId"
-            android:hint="@string/your_name"
-            android:textAlignment="center"
-            android:layout_marginBottom="10dp" />
+            android:orientation="vertical" >
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:layout_below="@+id/nameEditTextId"
-            android:layout_alignEnd="@+id/nameEditTextId"
-            android:id="@+id/emailEditTextId"
-            android:hint="@string/your_email"
-            android:textAlignment="center"
-            android:layout_marginBottom="10dp" />
+            <EditText
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/nameEditTextId"
+                android:hint="@string/your_name"
+                android:textAlignment="center"
+                android:layout_marginBottom="10dp" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:layout_below="@+id/emailEditTextId"
-            android:layout_alignEnd="@+id/emailEditTextId"
-            android:id="@+id/usernameEditTextId"
-            android:hint="@string/username"
-            android:textAlignment="center"
-            android:layout_marginBottom="10dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:layout_below="@+id/nameEditTextId"
+                android:layout_alignEnd="@+id/nameEditTextId"
+                android:id="@+id/emailEditTextId"
+                android:hint="@string/your_email"
+                android:textAlignment="center"
+                android:layout_marginBottom="10dp" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:layout_below="@+id/usernameEditTextId"
-            android:layout_alignEnd="@+id/usernameEditTextId"
-            android:id="@+id/passwordEditTextId"
-            android:hint="@string/password"
-            android:textAlignment="center"
-            android:layout_marginBottom="10dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:layout_below="@+id/emailEditTextId"
+                android:layout_alignEnd="@+id/emailEditTextId"
+                android:id="@+id/usernameEditTextId"
+                android:hint="@string/username"
+                android:textAlignment="center"
+                android:layout_marginBottom="10dp" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:layout_below="@+id/passwordEditTextId"
-            android:layout_alignStart="@+id/passwordEditTextId"
-            android:id="@+id/passwordConfEditTextId"
-            android:hint="@string/confirm_your_password"
-            android:textAlignment="center"
-            android:layout_marginBottom="20dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:layout_below="@+id/usernameEditTextId"
+                android:layout_alignEnd="@+id/usernameEditTextId"
+                android:id="@+id/passwordEditTextId"
+                android:hint="@string/password"
+                android:textAlignment="center"
+                android:layout_marginBottom="10dp" />
 
-        <Button
-            android:text="@string/sign_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/SignUpBtnId"
-            android:onClick="signUpBtnOnClick"
-            android:textSize="24sp"
-            android:textAllCaps="false"
-            android:layout_below="@+id/passwordConfEditTextId"
-            android:layout_alignStart="@+id/passwordConfEditTextId"
-            android:layout_alignEnd="@+id/passwordConfEditTextId" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:layout_below="@+id/passwordEditTextId"
+                android:layout_alignStart="@+id/passwordEditTextId"
+                android:id="@+id/passwordConfEditTextId"
+                android:hint="@string/confirm_your_password"
+                android:textAlignment="center"
+                android:layout_marginBottom="20dp" />
 
-    </RelativeLayout>
-</ScrollView>
+            <Button
+                android:text="@string/sign_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/SignUpBtnId"
+                android:onClick="signUpBtnOnClick"
+                android:textSize="24sp"
+                android:textAllCaps="false"
+                android:layout_below="@+id/passwordConfEditTextId"
+                android:layout_alignStart="@+id/passwordConfEditTextId"
+                android:layout_alignEnd="@+id/passwordConfEditTextId" />
+
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
