--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -9,42 +9,71 @@
         android:layout_height="200dp"
         app:srcCompat="@android:drawable/ic_menu_gallery"
         android:id="@+id/eventImageView"
-        android:layout_below="@+id/nameTextView"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/locaTextViewId"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:text="@string/text_view"
         android:layout_width="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/eventImageView"
-        android:layout_alignParentStart="true"
         android:id="@+id/dateTextView"
         android:textSize="18sp"
-        android:paddingRight="20dp" />
-
-    <TextView
-        android:text="@string/text_view"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/timeTextView"
-        android:layout_width="wrap_content"
-        android:textSize="18sp"
         android:layout_below="@+id/eventImageView"
-        android:layout_toEndOf="@+id/dateTextView" />
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:text="@string/text_view"
         android:textColor="#000000"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameTextView"
         android:textSize="24sp"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/eventImageView"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/musicTypeTextViewId"
+        android:layout_toEndOf="@+id/timeTextView"
+        android:textSize="18sp" />
+
+    <TextView
+        android:text="@string/text_view"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/musicTypeTextViewId"
+        android:layout_alignBottom="@+id/musicTypeTextViewId"
+        android:layout_toEndOf="@+id/dateTextView"
+        android:layout_marginRight="20dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/locaTextViewId"
+        android:textAlignment="textStart"
+        android:layout_below="@+id/nameTextView"
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/descTextViewId"
+        android:lines="6"
+        android:layout_below="@+id/dateTextView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
