Upload image... Permission fyrir read external storage það á eftir að testa það

--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -32,4 +32,12 @@
 
     <include layout="@layout/content_create_event" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/LoadingDisplayCE"
+        app:layout_anchorGravity="center_vertical|center_horizontal"
+        android:layout_gravity="center_vertical|center_horizontal" />
+
 </android.support.design.widget.CoordinatorLayout>
