--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -46,7 +46,7 @@
                 android:ems="10"
                 android:id="@+id/locationText"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="14dp"
                 android:layout_below="@+id/eventNameText"
                 android:layout_alignStart="@+id/eventNameText" />
 
@@ -60,7 +60,7 @@
                 android:textAlignment="center"
                 android:layout_below="@+id/timeText"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:inputType="date"
                 android:focusable="false"
                 />
@@ -74,7 +74,7 @@
                 android:ems="10"
                 android:id="@+id/timeText"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_below="@+id/descriptionText"
                 android:layout_alignStart="@+id/dateText"
                 android:focusable="false" />
@@ -82,37 +82,28 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="textPersonName"
                 android:hint="Description"
                 android:ems="10"
                 android:id="@+id/descriptionText"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:gravity="top|left"
-                android:scrollbars="vertical"
+                android:textAlignment="center"
+                android:layout_marginTop="19dp"
                 android:layout_below="@+id/locationText"
-                android:lines="5"
-                android:maxLength="250"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"
-                android:textAlignment="center" >
-                <requestFocus />
-            </EditText>
+                android:layout_alignStart="@+id/locationText" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageUrlText"
                 android:layout_below="@+id/upImageBtn"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 android:layout_centerHorizontal="true" />
 
             <RadioGroup
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginStart="40dp"
                 android:layout_below="@+id/dateText"
                 android:layout_alignParentStart="true"
@@ -124,7 +115,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnOther"
                     android:checked="true"
-                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -132,7 +122,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnRock"
-                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -140,7 +129,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnPop"
-                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -148,7 +136,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnJazz"
-                    android:onClick="onRadioButtonClicked"
                     />
             </RadioGroup>
 
