--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -96,9 +96,9 @@
                 android:layout_marginRight="15dp"
                 android:layout_below="@+id/locationText"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true" >
-                <requestFocus />
-            </EditText>
+                android:layout_alignParentEnd="true" />
+
+
 
 
             <TextView
