Detail Activity fyrir IcelandEvents nú er hægt að klkka á viðburð í fyrsta Activity

--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -33,7 +33,7 @@
                 android:inputType="textPersonName"
                 android:hint="Name of the Event"
                 android:ems="10"
-                android:id="@+id/eventNameText"
+                android:id="@+id/nameText"
                 android:textAlignment="center"
                 android:layout_alignParentTop="true"
                 android:layout_alignStart="@+id/timeText" />
@@ -46,9 +46,9 @@
                 android:ems="10"
                 android:id="@+id/locationText"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/eventNameText"
-                android:layout_alignStart="@+id/eventNameText" />
+                android:layout_marginTop="14dp"
+                android:layout_below="@+id/nameText"
+                android:layout_alignStart="@+id/nameText" />
 
 
             <EditText
@@ -60,7 +60,7 @@
                 android:textAlignment="center"
                 android:layout_below="@+id/timeText"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:inputType="date"
                 android:focusable="false"
                 />
@@ -74,7 +74,7 @@
                 android:ems="10"
                 android:id="@+id/timeText"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_below="@+id/descriptionText"
                 android:layout_alignStart="@+id/dateText"
                 android:focusable="false" />
@@ -82,24 +82,14 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="textPersonName"
                 android:hint="Description"
                 android:ems="10"
                 android:id="@+id/descriptionText"
                 android:textAlignment="center"
-                android:maxLength="250"
-                android:lines="5"
-                android:scrollbars="vertical"
-                android:gravity="top|left"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginTop="19dp"
                 android:layout_below="@+id/locationText"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true" />
-
-
-
+                android:layout_alignStart="@+id/locationText" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -113,7 +103,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginStart="40dp"
                 android:layout_below="@+id/dateText"
                 android:layout_alignParentStart="true"
@@ -125,7 +115,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnOther"
                     android:checked="true"
-
                     />
 
                 <RadioButton
@@ -133,7 +122,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnRock"
-
                     />
 
                 <RadioButton
@@ -141,7 +129,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnPop"
-
                     />
 
                 <RadioButton
@@ -149,7 +136,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnJazz"
-
                     />
             </RadioGroup>
 
