--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -9,41 +9,9 @@
         android:layout_height="200dp"
         app:srcCompat="@android:drawable/ic_menu_gallery"
         android:id="@+id/eventImageView"
-        android:layout_below="@+id/locaTextViewId"
+        android:layout_below="@+id/nameTextView"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp" />
-
-    <TextView
-        android:text="@string/text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/dateTextView"
-        android:textSize="18sp"
-        android:layout_below="@+id/eventImageView"
-        android:layout_alignParentStart="true"
-        android:layout_marginRight="20dp" />
-
-    <TextView
-        android:text="@string/text_view"
-        android:textColor="#000000"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/nameTextView"
-        android:textSize="24sp"
-        android:textAlignment="textStart"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/eventImageView"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/musicTypeTextViewId"
-        android:layout_toEndOf="@+id/timeTextView"
-        android:textSize="18sp" />
 
     <TextView
         android:text="@string/text_view"
@@ -51,29 +19,31 @@
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
         android:textSize="18sp"
-        android:layout_alignBaseline="@+id/musicTypeTextViewId"
-        android:layout_alignBottom="@+id/musicTypeTextViewId"
-        android:layout_toEndOf="@+id/dateTextView"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:layout_below="@+id/eventImageView"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/text_view"
+        android:textColor="#000000"
+        android:layout_marginTop="11dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/locaTextViewId"
+        android:id="@+id/nameTextView"
+        android:textSize="24sp"
         android:textAlignment="textStart"
-        android:layout_below="@+id/nameTextView"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textSize="18sp" />
+        android:layout_marginStart="16dp" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/descTextViewId"
-        android:lines="6"
-        android:layout_below="@+id/dateTextView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/dateTextView"
+        android:textSize="18sp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@+id/eventImageView"
+        android:layout_alignStart="@+id/nameTextView" />
 
 </RelativeLayout>
