--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -82,14 +82,20 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="textMultiLine"
                 android:hint="Description"
                 android:ems="10"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:maxLength="250"
+                android:lines="5"
+                android:scrollbars="vertical"
                 android:id="@+id/descriptionText"
                 android:textAlignment="center"
                 android:layout_marginTop="19dp"
                 android:layout_below="@+id/locationText"
-                android:layout_alignStart="@+id/locationText" />
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:layout_width="wrap_content"
