--- a/app/src/main/res/layout/content_reset_password.xml
+++ b/app/src/main/res/layout/content_reset_password.xml
@@ -81,7 +81,7 @@
                 android:layout_below="@+id/confirmPasswText"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="27dp"
-                android:onClick="changePasswOnClick"
+                android:onClick="changePasswordOnClick"
                 android:id="@+id/button" />
 
         </RelativeLayout>
