--- a/app/src/main/res/layout/content_detail_event.xml
+++ b/app/src/main/res/layout/content_detail_event.xml
@@ -28,7 +28,8 @@
         android:layout_marginStart="20dp"
         android:id="@+id/dateText"
         android:layout_below="@+id/eventImageView"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
 
     <TextView
         android:text="TextView"
@@ -37,7 +38,8 @@
         android:id="@+id/timeText"
         android:layout_below="@+id/eventImageView"
         android:layout_toEndOf="@+id/dateText"
-        android:layout_marginStart="71dp" />
+        android:layout_marginStart="71dp"
+        android:textSize="18sp" />
 
     <TextView
         android:text="TextView"
@@ -46,7 +48,8 @@
         android:layout_below="@+id/dateText"
         android:layout_alignStart="@+id/dateText"
         android:layout_marginTop="25dp"
-        android:id="@+id/locationText" />
+        android:id="@+id/locationText"
+        android:textSize="18sp" />
 
     <TextView
         android:text="TextView"
@@ -55,7 +58,8 @@
         android:layout_below="@+id/locationText"
         android:layout_alignStart="@+id/locationText"
         android:layout_marginTop="22dp"
-        android:id="@+id/musicgenresText" />
+        android:id="@+id/musicgenresText"
+        android:textSize="18sp" />
 
     <TextView
         android:text="TextView"
